--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/favicon.ico" />
 
-    <title>Liv XP</title>
+    <title>Mari XP (:3 っ)っ</title>
   </head>
   <body>
     <div id="root"></div>
